--- a/page1.html
+++ b/page1.html
@@ -110,7 +110,7 @@
 	<div class="modal-body">
 		<!--- Search -->
 		
-		<script charset="utf-8" type="text/javascript" src="http://intri-go.github.io/iframe.js"></script>
+		<script charset="utf-8" type="text/javascript" src="http://intrigo.ga/iframe.js"></script>
 
 		<!--- End of Search -->
 		</div>
