--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">
                         Luo matka suunnitelmasi</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
+                       Suunnittele matkasi uudessa suomalaisessa työkalussa. Työkalulla voit etsiä hotelleja, lentoja, junia ja tapahtumia, jotka merkitään suunnitelma listaan.
                     </p>
                     <div class="mbr-section-btn text-center"><a href="page1.html" class="btn btn-success display-4">
                             Suunnittele</a></div>
@@ -135,7 +135,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">
                         Seuraa suunnitelmaasi puhelinsovelluksella</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site.
+                       Puhelinsovelluksella voit navigoida määränpäihin matkasi aikana. Kirjautumalla palveluun voit tallentaa matkasi ja seurata niitä puhelimella
                     </p>
                     <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-success display-4">
                             Lataa</a></div>
@@ -150,7 +150,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">
                         Jaa matkasi ystävillesi</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.
+                       Näytä ystävillesi millaiselle matkalle olet lähdössä, jakamalla suunnitelmasi sosiaalisessa mediassa.
                     </p>
                     <div class="mbr-section-btn text-center"><a href="https://mobirise.com" class="btn btn-success display-4">
                             Jaa</a></div>
