--- a/page1.html
+++ b/page1.html
@@ -23,6 +23,14 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+	<!--adding js files-->
+    <script src="./jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="./jquery.twidget.js?v_1207"></script>
+    <link rel="stylesheet" type="text/css" href="./reset.css">
+    <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker3.standalone.css">
+    <link rel="stylesheet" type="text/css" href="./style.css?v_1207">
 	<link href="suunnitelmastyle.css" rel="stylesheet">
 	<script type="text/javascript">
 			<!--
@@ -110,7 +118,15 @@
 	<div class="modal-body">
 		<!--- Search -->
 		
-		
+		<div class="twidget-container" id="twidget"></div>
+<br><br>
+<script>
+        $('#twidget').twidget({
+            locale: 'en',
+            marker: 78606,
+            type: 'hotel'
+        });
+</script>
 
 		<!--- End of Search -->
 		</div>
