--- a/search.html
+++ b/search.html
@@ -1,7 +1,9 @@
 <<!DOCTYPE html>
 <html >
 <head>
-
+    <link rel="stylesheet" type="text/css" href="./reset.css">
+    <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker3.standalone.css">
+    <link rel="stylesheet" type="text/css" href="./style.css?v_1207">
 </head>
 <body>
   
