--- a/search.html
+++ b/search.html
@@ -133,6 +133,13 @@
 </div>
 <br>
 <br>
+    <script>
+        $('#twidget').twidget({
+            locale: 'en',
+            marker: 78606,
+            type: 'hotel'
+        });
+</script>
 <!--- end of search -->
                        
 </body>
