--- a/search.html
+++ b/search.html
@@ -115,7 +115,7 @@
               <!--- partner marker -->
               <input type="hidden" name="marker" value="78606" class="animated fadeInUp">
               <!--- hotel search language -->
-              <input type="hidden" name="language" value="en" class="animated fadeInUp">
+              <input type="hidden" name="language" value="fi" class="animated fadeInUp">
               <!--- submit button -->
               <li class="twidget-submit-button">
                 <button type="submit" class>Search</button>
