--- a/search.html
+++ b/search.html
@@ -135,7 +135,7 @@
 <br>
     <script>
         $('#twidget').twidget({
-            locale: 'en',
+            locale: 'fi',
             marker: 78606,
             type: 'hotel'
         });
