--- a/search.html
+++ b/search.html
@@ -1,5 +1,5 @@
-<<!DOCTYPE html>
-<html >
+<!DOCTYPE html>
+<html>
 <head>
     <script src="./jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.js"></script>
