--- a/search.html
+++ b/search.html
@@ -22,7 +22,7 @@
       <!--- hotel tab content -->
         <div id="twidget-tab2" class="twidget-tab" style="display: block;">
           <div class="twidget-header">
-            <a href="https://hotellook.com/?marker=78606" class="twidget-logo">
+            <a href="images/hl-logo.PNG" class="twidget-logo">
               <div class="twidget-logo-image twidget-hotellook-logo-img" width="30" height="30"></div>
               "Hotellook"
             </a>
