--- a/search.html
+++ b/search.html
@@ -24,9 +24,9 @@
           <div class="twidget-header">
             <a href="images/hl-logo.PNG" class="twidget-logo">
               <div class="twidget-logo-image twidget-hotellook-logo-img" width="30" height="30"></div>
-              "Hotellook"
+              "Intri-Go"
             </a>
-            <a href="https://hotellook.com/?marker=78606" class="twidget-title">Search and compare Hotel Prices</a>
+            <a href="https://hotellook.com/?marker=78606" class="twidget-title">Hae & Vertaile Hotelli Hintoja</a>
            </div>
            <form action="https://search.hotellook.com/" method="get" autocomplete="off">
             <ul class="twidget-form-list clearfix">
