--- a/page1.html
+++ b/page1.html
@@ -46,7 +46,7 @@
   
   
 
-<p>5. <img href="images/twitter.jpg"></p>
+	<p>5.</p> <img src="images/twitter.jpg"> 
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
