--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
+                    <a href="#">
                          <img src="" alt="Across The Years" title="ATY" style="height: 4.5rem;">
                     </a>
                 </span>
