--- a/puzzleindex.html
+++ b/puzzleindex.html
@@ -32,7 +32,7 @@
         <span id="time">Time: 100</span>
       </div>
     </div>
-    <h1 class="message">You win!</h1>
+    <h1 class="message">Koodi</h1>
 
 
     <script src="puzzlescript.js"></script>
