--- a/puzzleindex.html
+++ b/puzzleindex.html
@@ -8,21 +8,21 @@
   <body>
     <div class="game">
       <div class="grid">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>10</button>
-        <button>11</button>
-        <button>12</button>
-        <button>13</button>
-        <button>14</button>
-        <button>15</button>
+        <button>A(1)</button>
+        <button>T(2)</button>
+        <button>Y</button>
+        <button>:</button>
+        <button>N</button>
+        <button>V</button>
+        <button>A(2)</button>
+        <button>L</button>
+        <button>T(2)</button>
+        <button>A(3)</button>
+        <button>K</button>
+        <button>A(4)</button>
+        <button>U</button>
+        <button>S</button>
+        <button>I</button>
         <button></button>
       </div>
 
